fix scrollbar at 900px

--- a/blocks/photo-feed/__card-caption/photo-feed__card-caption.css
+++ b/blocks/photo-feed/__card-caption/photo-feed__card-caption.css
@@ -7,7 +7,7 @@
   line-height: 29px;
   text-align: center;
   padding: 25px 0 31px 0;
-  width: 288px;
+  max-width: 288px;
   display: flex;
   justify-content: space-between;
 }
